<resources>
    <string name="app_name">barCheckout</string>
    <string name="add">hinzufügen</string>
    <string name="imageDrink">Getränke Bild</string>
    <string name="cancel">Abbrechen</string>
    <string name="priceNormal">Preis Normal</string>
    <string name="priceEmployee">Preis Mitarbeiter</string>
    <string name="quantitiy">Anzahl im Lager</string>
    <string name="count">Anzahl</string>
    <string name="newDrink">Neuer Drink</string>
    <string name="loadSampels">Beispiel laden</string>


    <!--BeispielDaten-->
    <!--säter in der Datenbank-->

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Nächste</string>
    <string name="previous">Zurück</string>

    <string name="save_data">Speichern</string>
    <string name="Drink_Picture">Bild für das Angelegte Bild</string>
    <string name="drink_name">Name des Drinks</string>
    <string name="price_drink_normal">Drink Preis Normal</string>
    <string name="drink_price_employee">Drink Preis Mitarbeiter</string>
    <string name="Quantity_stock">Lager Menge</string>
    <string name="invoiceNr">Rechnungs Nr</string>
    <string name="bill">Betrag</string>
    <string name="moneyGiven">Geld gegeben</string>
    <string name="moneychange">Rückgeld</string>
    <string name="notEmpty">muss ausgefüllt werden</string>
    <string name="clickPicAbove">Für Bildauswahl das obere Bild anklicken</string>
    <string name="navigation_drawer_open">open Drawer</string>
    <string name="navigation_drawer_close">close Drawer</string>
    <string name="title_activity_basic">BasicActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>